Finished but pictures could be resized

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    ;
+    
+    /*background-image: url("images\galaxy.jpg");*/
+    
+}
+body{
+    background-color: gray;
+    /*background-image: url("images\galaxy.jpg");*/
 }
 header,
 main,
@@ -17,7 +25,7 @@ html{
     margin-top: 3em;
 }
 h1, h2, h3{
-    color: purple;
+    color:black;
 }
 header{
     padding: 2em 0;
@@ -27,7 +35,7 @@ header h1{
 }
 header span{
     font-size: 1.5em;
-    color: red;
+    color: gray;
 }
 nav{
     position: fixed;
@@ -37,24 +45,21 @@ nav{
     display: flex;
     flex-flow:row;
     justify-content: center;
-    background: yellow;
+    background:black;
 }
 nav a{
-    color: black;
+    color: gray;
     text-decoration: none;
     padding: .5em 2em;
 }
 
 nav a:hover{
-    background-color: white;
+    background-color: gray;
 }
 section{
     margin: 1em o;
     padding-top: 3em;
     min-height: 20em;
-}
-section > p{
-    margin: 1em;
 }
 section >p{
     margin: 1em 0;
@@ -62,10 +67,29 @@ section >p{
 section ul{
     padding-left: 1.5em;
 }
+
+#products{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 1em;
+}
+#products article{
+    background: gray;
+    padding: 1em;
+}
+
+#products article img{
+    width: 100%;
+    border: 1px solid purple;
+}
+
+
 footer{
     margin-top: 2em;
     margin-bottom: 1em;
-    background: purple;
+    background: black;
     padding: 1em 0;
     text-align: center;
+    color: gray;
 }
